--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "crypto": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "mathjs": "^11.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
     "stream": "^0.0.2",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.183",
@@ -46,7 +50,7 @@
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=8080 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
@@ -59,7 +63,8 @@
   },
   "browser": {
     "crypto": false,
-    "stream": false
+    "stream": false,
+    "fs": false
   },
   "browserslist": {
     "production": [
