--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "mathjs": "^11.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,8 @@
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
     "stream": "^0.0.2",
+    "strip-json-trailing-commas": "^1.1.0",
+    "ts-json-object": "^0.4.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.2"
