--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "saas": "^1.0.0",
     "stream": "^0.0.2",
     "strip-json-trailing-commas": "^1.1.0",
