--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
+    "@mui/material": "^5.11.5",
     "@project-serum/anchor": "^0.24.2",
     "@solana/spl-token": "^0.3.7",
     "@solana/spl-token-registry": "^0.2.4574",
