--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mathjs": "^11.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
